Certificate section was designed in half an hour. Have no time

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -30,6 +30,7 @@
       //= components/main/discounts/discounts.html
       //= components/main/brands/brands.html
       //= components/main/catalog/catalog.html
+      //= components/main/certs/certs.html
     </main>
     <div class="page__overlay"></div>
     //= components/main/footer/footer.html
