Catalog section items align fixed

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -31,6 +31,7 @@
       //= components/main/brands/brands.html
       //= components/main/catalog/catalog.html
       //= components/main/certs/certs.html
+      //= components/main/contacts/contacts.html
     </main>
     <div class="page__overlay"></div>
     //= components/main/footer/footer.html
