The catalog navigation sub block was added to the top panel

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -18,7 +18,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="./css/main.min.css">
-  <title>Обо</title>
+  <title>Russian box: Оборудование для бизнеса</title>
 </head>
 
 <body>
